parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> service
Rule 1     service -> SERVICE { htmls schemas variables functions sessions }
Rule 2     htmls -> html
Rule 3     htmls -> html htmls
Rule 4     html -> CONST HTML IDENTIFIER = START_HTML_LITERAL nehtmlbodies END_HTML_LITERAL ;
Rule 5     html -> CONST HTML IDENTIFIER = START_HTML_LITERAL END_HTML_LITERAL ;
Rule 6     nehtmlbodies -> htmlbody
Rule 7     nehtmlbodies -> htmlbody nehtmlbodies
Rule 8     htmlbody -> START_TAG IDENTIFIER attributes END_TAG
Rule 9     htmlbody -> START_CLOSE_TAG IDENTIFIER END_TAG
Rule 10    htmlbody -> START_HOLE IDENTIFIER END_HOLE
Rule 11    htmlbody -> WHATEVER
Rule 12    htmlbody -> META
Rule 13    htmlbody -> START_TAG INPUT attributes END_TAG
Rule 14    htmlbody -> START_TAG SELECT attributes END_TAG nehtmlbodies START_CLOSE_TAG SELECT END_TAG
Rule 15    htmlbody -> START_TAG SELECT attributes END_TAG START_CLOSE_TAG SELECT END_TAG
Rule 16    attributes -> <empty>
Rule 17    attributes -> neattributes
Rule 18    neattributes -> attribute
Rule 19    neattributes -> attribute neattributes
Rule 20    attribute -> attr
Rule 21    attribute -> attr = attr
Rule 22    attr -> IDENTIFIER
Rule 23    attr -> STRING_LITERAL
Rule 24    schemas -> <empty>
Rule 25    schemas -> neschemas
Rule 26    neschemas -> schema
Rule 27    neschemas -> schema neschemas
Rule 28    schema -> SCHEMA IDENTIFIER { fields }
Rule 29    fields -> <empty>
Rule 30    fields -> nefields
Rule 31    nefields -> field
Rule 32    nefields -> field nefields
Rule 33    field -> simpletype IDENTIFIER ;
Rule 34    variables -> <empty>
Rule 35    variables -> nevariables
Rule 36    nevariables -> variable
Rule 37    nevariables -> variable nevariables
Rule 38    variable -> type identifiers ;
Rule 39    identifiers -> IDENTIFIER
Rule 40    identifiers -> IDENTIFIER , identifiers
Rule 41    simpletype -> INT
Rule 42    simpletype -> BOOL
Rule 43    simpletype -> STRING
Rule 44    simpletype -> VOID
Rule 45    type -> simpletype
Rule 46    type -> TUPLE IDENTIFIER
Rule 47    functions -> <empty>
Rule 48    functions -> nefunctions
Rule 49    nefunctions -> function
Rule 50    nefunctions -> function nefunctions
Rule 51    function -> type IDENTIFIER ( arguments ) compoundstm
Rule 52    arguments -> <empty>
Rule 53    arguments -> nearguments
Rule 54    nearguments -> argument
Rule 55    nearguments -> argument , nearguments
Rule 56    argument -> type IDENTIFIER
Rule 57    sessions -> session
Rule 58    sessions -> session sessions
Rule 59    session -> SESSION IDENTIFIER ( ) compoundstm
Rule 60    stms -> <empty>
Rule 61    stms -> nestms
Rule 62    nestms -> stm
Rule 63    nestms -> stm nestms
Rule 64    stm -> ;
Rule 65    stm -> SHOW document receive ;
Rule 66    stm -> EXIT document ;
Rule 67    stm -> RETURN ;
Rule 68    stm -> RETURN exp ;
Rule 69    stm -> IF ( exp ) stm
Rule 70    stm -> IF ( exp ) stm ELSE stm
Rule 71    stm -> WHILE ( exp ) compoundstm
Rule 72    stm -> compoundstm
Rule 73    stm -> exp ;
Rule 74    document -> IDENTIFIER
Rule 75    document -> PLUG IDENTIFIER [ plugs ]
Rule 76    receive -> <empty>
Rule 77    receive -> RECEIVE [ inputs ]
Rule 78    compoundstm -> { variables stms }
Rule 79    plugs -> plug
Rule 80    plugs -> plug , plugs
Rule 81    plug -> IDENTIFIER = exp
Rule 82    inputs -> <empty>
Rule 83    inputs -> neinputs
Rule 84    neinputs -> input
Rule 85    neinputs -> input , neinputs
Rule 86    input -> lvalue = IDENTIFIER
Rule 87    exp -> lvalue = exp
Rule 88    exp -> exp EQ exp
Rule 89    exp -> exp NEQ exp
Rule 90    exp -> exp < exp
Rule 91    exp -> exp > exp
Rule 92    exp -> exp LTEQ exp
Rule 93    exp -> exp GTEQ exp
Rule 94    exp -> exp + exp
Rule 95    exp -> exp - exp
Rule 96    exp -> exp * exp
Rule 97    exp -> exp / exp
Rule 98    exp -> exp % exp
Rule 99    exp -> exp AND exp
Rule 100   exp -> exp OR exp
Rule 101   exp -> exp LSHIFT exp
Rule 102   exp -> exp TADD IDENTIFIER
Rule 103   exp -> exp TADD ( identifiers )
Rule 104   exp -> exp TSUB IDENTIFIER
Rule 105   exp -> exp TSUB ( identifiers )
Rule 106   exp -> - exp
Rule 107   exp -> ! exp
Rule 108   exp -> lvalue
Rule 109   exp -> IDENTIFIER ( exps )
Rule 110   exp -> STRING_LITERAL
Rule 111   exp -> TRUE
Rule 112   exp -> FALSE
Rule 113   exp -> INT_LITERAL
Rule 114   exp -> TUPLE { fieldvalues }
Rule 115   exp -> ( exp )
Rule 116   exps -> <empty>
Rule 117   exps -> neexps
Rule 118   neexps -> exp
Rule 119   neexps -> exp , neexps
Rule 120   lvalue -> IDENTIFIER
Rule 121   lvalue -> IDENTIFIER . IDENTIFIER
Rule 122   fieldvalues -> <empty>
Rule 123   fieldvalues -> nefieldvalues
Rule 124   nefieldvalues -> fieldvalue
Rule 125   nefieldvalues -> fieldvalue , fieldvalues
Rule 126   fieldvalue -> IDENTIFIER = exp

Terminals, with rules where they appear

!                    : 107
%                    : 98
(                    : 51 59 69 70 71 103 105 109 115
)                    : 51 59 69 70 71 103 105 109 115
*                    : 96
+                    : 94
,                    : 40 55 80 85 119 125
-                    : 95 106
.                    : 121
/                    : 97
;                    : 4 5 33 38 64 65 66 67 68 73
<                    : 90
=                    : 4 5 21 81 86 87 126
>                    : 91
AND                  : 99
BOOL                 : 42
CONST                : 4 5
ELSE                 : 70
END_HOLE             : 10
END_HTML_LITERAL     : 4 5
END_TAG              : 8 9 13 14 14 15 15
EQ                   : 88
EXIT                 : 66
FALSE                : 112
GTEQ                 : 93
HTML                 : 4 5
IDENTIFIER           : 4 5 8 9 10 22 28 33 39 40 46 51 56 59 74 75 81 86 102 104 109 120 121 121 126
IF                   : 69 70
INPUT                : 13
INT                  : 41
INT_LITERAL          : 113
LSHIFT               : 101
LTEQ                 : 92
META                 : 12
NEQ                  : 89
OR                   : 100
PLUG                 : 75
RECEIVE              : 77
RETURN               : 67 68
SCHEMA               : 28
SELECT               : 14 14 15 15
SERVICE              : 1
SESSION              : 59
SHOW                 : 65
START_CLOSE_TAG      : 9 14 15
START_HOLE           : 10
START_HTML_LITERAL   : 4 5
START_TAG            : 8 13 14 15
STRING               : 43
STRING_LITERAL       : 23 110
TADD                 : 102 103
TRUE                 : 111
TSUB                 : 104 105
TUPLE                : 46 114
VOID                 : 44
WHATEVER             : 11
WHILE                : 71
[                    : 75 77
]                    : 75 77
error                : 
{                    : 1 28 78 114
}                    : 1 28 78 114

Nonterminals, with rules where they appear

argument             : 54 55
arguments            : 51
attr                 : 20 21 21
attribute            : 18 19
attributes           : 8 13 14 15
compoundstm          : 51 59 71 72
document             : 65 66
exp                  : 68 69 70 71 73 81 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 103 104 105 106 107 115 118 119 126
exps                 : 109
field                : 31 32
fields               : 28
fieldvalue           : 124 125
fieldvalues          : 114 125
function             : 49 50
functions            : 1
html                 : 2 3
htmlbody             : 6 7
htmls                : 1 3
identifiers          : 38 40 103 105
input                : 84 85
inputs               : 77
lvalue               : 86 87 108
nearguments          : 53 55
neattributes         : 17 19
neexps               : 117 119
nefields             : 30 32
nefieldvalues        : 123
nefunctions          : 48 50
nehtmlbodies         : 4 7 14
neinputs             : 83 85
neschemas            : 25 27
nestms               : 61 63
nevariables          : 35 37
plug                 : 79 80
plugs                : 75 80
receive              : 65
schema               : 26 27
schemas              : 1
service              : 0
session              : 57 58
sessions             : 1 58
simpletype           : 33 45
stm                  : 62 63 69 70 70
stms                 : 78
type                 : 38 51 56
variable             : 36 37
variables            : 1 78

Parsing method: LALR

state 0

    (0) S' -> . service
    (1) service -> . SERVICE { htmls schemas variables functions sessions }

    SERVICE         shift and go to state 2

    service                        shift and go to state 1

state 1

    (0) S' -> service .



state 2

    (1) service -> SERVICE . { htmls schemas variables functions sessions }

    {               shift and go to state 3


state 3

    (1) service -> SERVICE { . htmls schemas variables functions sessions }
    (2) htmls -> . html
    (3) htmls -> . html htmls
    (4) html -> . CONST HTML IDENTIFIER = START_HTML_LITERAL nehtmlbodies END_HTML_LITERAL ;
    (5) html -> . CONST HTML IDENTIFIER = START_HTML_LITERAL END_HTML_LITERAL ;

    CONST           shift and go to state 4

    htmls                          shift and go to state 6
    html                           shift and go to state 5

state 4

    (4) html -> CONST . HTML IDENTIFIER = START_HTML_LITERAL nehtmlbodies END_HTML_LITERAL ;
    (5) html -> CONST . HTML IDENTIFIER = START_HTML_LITERAL END_HTML_LITERAL ;

    HTML            shift and go to state 7


state 5

    (2) htmls -> html .
    (3) htmls -> html . htmls
    (2) htmls -> . html
    (3) htmls -> . html htmls
    (4) html -> . CONST HTML IDENTIFIER = START_HTML_LITERAL nehtmlbodies END_HTML_LITERAL ;
    (5) html -> . CONST HTML IDENTIFIER = START_HTML_LITERAL END_HTML_LITERAL ;

    SCHEMA          reduce using rule 2 (htmls -> html .)
    TUPLE           reduce using rule 2 (htmls -> html .)
    INT             reduce using rule 2 (htmls -> html .)
    BOOL            reduce using rule 2 (htmls -> html .)
    STRING          reduce using rule 2 (htmls -> html .)
    VOID            reduce using rule 2 (htmls -> html .)
    SESSION         reduce using rule 2 (htmls -> html .)
    CONST           shift and go to state 4

    html                           shift and go to state 5
    htmls                          shift and go to state 8

state 6

    (1) service -> SERVICE { htmls . schemas variables functions sessions }
    (24) schemas -> .
    (25) schemas -> . neschemas
    (26) neschemas -> . schema
    (27) neschemas -> . schema neschemas
    (28) schema -> . SCHEMA IDENTIFIER { fields }

    TUPLE           reduce using rule 24 (schemas -> .)
    INT             reduce using rule 24 (schemas -> .)
    BOOL            reduce using rule 24 (schemas -> .)
    STRING          reduce using rule 24 (schemas -> .)
    VOID            reduce using rule 24 (schemas -> .)
    SESSION         reduce using rule 24 (schemas -> .)
    SCHEMA          shift and go to state 9

    neschemas                      shift and go to state 10
    schema                         shift and go to state 11
    schemas                        shift and go to state 12

state 7

    (4) html -> CONST HTML . IDENTIFIER = START_HTML_LITERAL nehtmlbodies END_HTML_LITERAL ;
    (5) html -> CONST HTML . IDENTIFIER = START_HTML_LITERAL END_HTML_LITERAL ;

    IDENTIFIER      shift and go to state 13


state 8

    (3) htmls -> html htmls .

    SCHEMA          reduce using rule 3 (htmls -> html htmls .)
    TUPLE           reduce using rule 3 (htmls -> html htmls .)
    INT             reduce using rule 3 (htmls -> html htmls .)
    BOOL            reduce using rule 3 (htmls -> html htmls .)
    STRING          reduce using rule 3 (htmls -> html htmls .)
    VOID            reduce using rule 3 (htmls -> html htmls .)
    SESSION         reduce using rule 3 (htmls -> html htmls .)


state 9

    (28) schema -> SCHEMA . IDENTIFIER { fields }

    IDENTIFIER      shift and go to state 14


state 10

    (25) schemas -> neschemas .

    TUPLE           reduce using rule 25 (schemas -> neschemas .)
    INT             reduce using rule 25 (schemas -> neschemas .)
    BOOL            reduce using rule 25 (schemas -> neschemas .)
    STRING          reduce using rule 25 (schemas -> neschemas .)
    VOID            reduce using rule 25 (schemas -> neschemas .)
    SESSION         reduce using rule 25 (schemas -> neschemas .)


state 11

    (26) neschemas -> schema .
    (27) neschemas -> schema . neschemas
    (26) neschemas -> . schema
    (27) neschemas -> . schema neschemas
    (28) schema -> . SCHEMA IDENTIFIER { fields }

    TUPLE           reduce using rule 26 (neschemas -> schema .)
    INT             reduce using rule 26 (neschemas -> schema .)
    BOOL            reduce using rule 26 (neschemas -> schema .)
    STRING          reduce using rule 26 (neschemas -> schema .)
    VOID            reduce using rule 26 (neschemas -> schema .)
    SESSION         reduce using rule 26 (neschemas -> schema .)
    SCHEMA          shift and go to state 9

    neschemas                      shift and go to state 15
    schema                         shift and go to state 11

state 12

    (1) service -> SERVICE { htmls schemas . variables functions sessions }
    (34) variables -> .
    (35) variables -> . nevariables
    (36) nevariables -> . variable
    (37) nevariables -> . variable nevariables
    (38) variable -> . type identifiers ;
    (45) type -> . simpletype
    (46) type -> . TUPLE IDENTIFIER
    (41) simpletype -> . INT
    (42) simpletype -> . BOOL
    (43) simpletype -> . STRING
    (44) simpletype -> . VOID

  ! shift/reduce conflict for TUPLE resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
    SESSION         reduce using rule 34 (variables -> .)
    TUPLE           shift and go to state 21
    INT             shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    VOID            shift and go to state 22

  ! TUPLE           [ reduce using rule 34 (variables -> .) ]
  ! INT             [ reduce using rule 34 (variables -> .) ]
  ! BOOL            [ reduce using rule 34 (variables -> .) ]
  ! STRING          [ reduce using rule 34 (variables -> .) ]
  ! VOID            [ reduce using rule 34 (variables -> .) ]

    simpletype                     shift and go to state 16
    nevariables                    shift and go to state 17
    variables                      shift and go to state 20
    variable                       shift and go to state 25
    type                           shift and go to state 19

state 13

    (4) html -> CONST HTML IDENTIFIER . = START_HTML_LITERAL nehtmlbodies END_HTML_LITERAL ;
    (5) html -> CONST HTML IDENTIFIER . = START_HTML_LITERAL END_HTML_LITERAL ;

    =               shift and go to state 26


state 14

    (28) schema -> SCHEMA IDENTIFIER . { fields }

    {               shift and go to state 27


state 15

    (27) neschemas -> schema neschemas .

    TUPLE           reduce using rule 27 (neschemas -> schema neschemas .)
    INT             reduce using rule 27 (neschemas -> schema neschemas .)
    BOOL            reduce using rule 27 (neschemas -> schema neschemas .)
    STRING          reduce using rule 27 (neschemas -> schema neschemas .)
    VOID            reduce using rule 27 (neschemas -> schema neschemas .)
    SESSION         reduce using rule 27 (neschemas -> schema neschemas .)


state 16

    (45) type -> simpletype .

    IDENTIFIER      reduce using rule 45 (type -> simpletype .)


state 17

    (35) variables -> nevariables .

    ;               reduce using rule 35 (variables -> nevariables .)
    SHOW            reduce using rule 35 (variables -> nevariables .)
    EXIT            reduce using rule 35 (variables -> nevariables .)
    RETURN          reduce using rule 35 (variables -> nevariables .)
    IF              reduce using rule 35 (variables -> nevariables .)
    WHILE           reduce using rule 35 (variables -> nevariables .)
    {               reduce using rule 35 (variables -> nevariables .)
    -               reduce using rule 35 (variables -> nevariables .)
    !               reduce using rule 35 (variables -> nevariables .)
    IDENTIFIER      reduce using rule 35 (variables -> nevariables .)
    STRING_LITERAL  reduce using rule 35 (variables -> nevariables .)
    TRUE            reduce using rule 35 (variables -> nevariables .)
    FALSE           reduce using rule 35 (variables -> nevariables .)
    INT_LITERAL     reduce using rule 35 (variables -> nevariables .)
    TUPLE           reduce using rule 35 (variables -> nevariables .)
    (               reduce using rule 35 (variables -> nevariables .)
    }               reduce using rule 35 (variables -> nevariables .)
    INT             reduce using rule 35 (variables -> nevariables .)
    BOOL            reduce using rule 35 (variables -> nevariables .)
    STRING          reduce using rule 35 (variables -> nevariables .)
    VOID            reduce using rule 35 (variables -> nevariables .)
    SESSION         reduce using rule 35 (variables -> nevariables .)


state 18

    (41) simpletype -> INT .

    IDENTIFIER      reduce using rule 41 (simpletype -> INT .)


state 19

    (38) variable -> type . identifiers ;
    (39) identifiers -> . IDENTIFIER
    (40) identifiers -> . IDENTIFIER , identifiers

    IDENTIFIER      shift and go to state 28

    identifiers                    shift and go to state 29

state 20

    (1) service -> SERVICE { htmls schemas variables . functions sessions }
    (47) functions -> .
    (48) functions -> . nefunctions
    (49) nefunctions -> . function
    (50) nefunctions -> . function nefunctions
    (51) function -> . type IDENTIFIER ( arguments ) compoundstm
    (45) type -> . simpletype
    (46) type -> . TUPLE IDENTIFIER
    (41) simpletype -> . INT
    (42) simpletype -> . BOOL
    (43) simpletype -> . STRING
    (44) simpletype -> . VOID

    SESSION         reduce using rule 47 (functions -> .)
    TUPLE           shift and go to state 21
    INT             shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    VOID            shift and go to state 22

    function                       shift and go to state 32
    functions                      shift and go to state 30
    simpletype                     shift and go to state 16
    nefunctions                    shift and go to state 33
    type                           shift and go to state 31

state 21

    (46) type -> TUPLE . IDENTIFIER

    IDENTIFIER      shift and go to state 34


state 22

    (44) simpletype -> VOID .

    IDENTIFIER      reduce using rule 44 (simpletype -> VOID .)


state 23

    (42) simpletype -> BOOL .

    IDENTIFIER      reduce using rule 42 (simpletype -> BOOL .)


state 24

    (43) simpletype -> STRING .

    IDENTIFIER      reduce using rule 43 (simpletype -> STRING .)


state 25

    (36) nevariables -> variable .
    (37) nevariables -> variable . nevariables
    (36) nevariables -> . variable
    (37) nevariables -> . variable nevariables
    (38) variable -> . type identifiers ;
    (45) type -> . simpletype
    (46) type -> . TUPLE IDENTIFIER
    (41) simpletype -> . INT
    (42) simpletype -> . BOOL
    (43) simpletype -> . STRING
    (44) simpletype -> . VOID

  ! shift/reduce conflict for TUPLE resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
    ;               reduce using rule 36 (nevariables -> variable .)
    SHOW            reduce using rule 36 (nevariables -> variable .)
    EXIT            reduce using rule 36 (nevariables -> variable .)
    RETURN          reduce using rule 36 (nevariables -> variable .)
    IF              reduce using rule 36 (nevariables -> variable .)
    WHILE           reduce using rule 36 (nevariables -> variable .)
    {               reduce using rule 36 (nevariables -> variable .)
    -               reduce using rule 36 (nevariables -> variable .)
    !               reduce using rule 36 (nevariables -> variable .)
    IDENTIFIER      reduce using rule 36 (nevariables -> variable .)
    STRING_LITERAL  reduce using rule 36 (nevariables -> variable .)
    TRUE            reduce using rule 36 (nevariables -> variable .)
    FALSE           reduce using rule 36 (nevariables -> variable .)
    INT_LITERAL     reduce using rule 36 (nevariables -> variable .)
    (               reduce using rule 36 (nevariables -> variable .)
    }               reduce using rule 36 (nevariables -> variable .)
    SESSION         reduce using rule 36 (nevariables -> variable .)
    TUPLE           shift and go to state 21
    INT             shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    VOID            shift and go to state 22

  ! TUPLE           [ reduce using rule 36 (nevariables -> variable .) ]
  ! INT             [ reduce using rule 36 (nevariables -> variable .) ]
  ! BOOL            [ reduce using rule 36 (nevariables -> variable .) ]
  ! STRING          [ reduce using rule 36 (nevariables -> variable .) ]
  ! VOID            [ reduce using rule 36 (nevariables -> variable .) ]

    variable                       shift and go to state 25
    simpletype                     shift and go to state 16
    type                           shift and go to state 19
    nevariables                    shift and go to state 35

state 26

    (4) html -> CONST HTML IDENTIFIER = . START_HTML_LITERAL nehtmlbodies END_HTML_LITERAL ;
    (5) html -> CONST HTML IDENTIFIER = . START_HTML_LITERAL END_HTML_LITERAL ;

    START_HTML_LITERAL shift and go to state 36


state 27

    (28) schema -> SCHEMA IDENTIFIER { . fields }
    (29) fields -> .
    (30) fields -> . nefields
    (31) nefields -> . field
    (32) nefields -> . field nefields
    (33) field -> . simpletype IDENTIFIER ;
    (41) simpletype -> . INT
    (42) simpletype -> . BOOL
    (43) simpletype -> . STRING
    (44) simpletype -> . VOID

    }               reduce using rule 29 (fields -> .)
    INT             shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    VOID            shift and go to state 22

    fields                         shift and go to state 38
    simpletype                     shift and go to state 40
    nefields                       shift and go to state 37
    field                          shift and go to state 39

state 28

    (39) identifiers -> IDENTIFIER .
    (40) identifiers -> IDENTIFIER . , identifiers

    )               reduce using rule 39 (identifiers -> IDENTIFIER .)
    ;               reduce using rule 39 (identifiers -> IDENTIFIER .)
    ,               shift and go to state 41


state 29

    (38) variable -> type identifiers . ;

    ;               shift and go to state 42


state 30
